# tiktoken-rs

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  SECURITY.md  TODO.md  renovate.json
.github/: release.yml
.github/workflows/: ci.yml  release.yml
bindings/python/: .gitignore  package.json  polywrap.yaml  pyproject.toml
bindings/python/tiktoken/: __init__.py  __main__.py
bindings/python/tiktoken/wrap/: types.py
bindings/typescript/: package.json  polywrap.graphql  polywrap.yaml  tsconfig.json
bindings/typescript/src/: index.ts
bindings/typescript/src/wrap/: types.ts
bindings/wrap/: .gitignore  Cargo.toml  README.md  build.sh  package.json  polywrap.build.yaml  polywrap.deploy.yaml  polywrap.graphql  polywrap.test.cue  polywrap.test.yaml  polywrap.yaml
bindings/wrap/src/: lib.rs
bindings/wrap/tests/: mod.rs
bindings/wrap/tests/it/: mod.rs  module.rs
bindings/wrap/tests/types/: mod.rs  polywrap.app.graphql  polywrap.app.yaml
examples/: count_tokens.rs
scripts/: download_assets.sh  update_vendored_code.sh
src/: lib.rs  tiktoken.rs
tests/: tiktoken.rs
tiktoken-rs/: Cargo.toml  README.md
tiktoken-rs/benches/: basic.rs  init.rs  locking.rs
tiktoken-rs/examples/: count_chat_tokens.rs  count_tokens.rs  example_text.txt  num_tokens_memory.rs  parallel_benchmark.rs
tiktoken-rs/src/: api.rs  lib.rs  main.rs  model.rs  patched_tiktoken.rs  singleton.rs  tiktoken.rs  token.rs  tokenizer.rs  vendor_tiktoken.rs
tiktoken-rs/src/tiktoken_ext/: llama3.rs  mod.rs  openai_public.rs
tiktoken-rs/tests/: model.rs  tiktoken.rs
workflows/: ci.yml  release.yml
