[package]
name = "tiktoken-rs"
version = "0.9.1"
description = "Library for encoding and decoding with the tiktoken library in Rust"
include = ["assets/**/*", "src/**/*", "README.md"]
edition = "2021"
authors = ["Roger Zurawicki <roger@zura.wiki>"]
rust-version = "1.66.0"
keywords = ["openai", "ai", "gpt", "bpe"]
homepage = "https://github.com/zurawiki/tiktoken-rs"
repository = "https://github.com/zurawiki/tiktoken-rs"
documentation = "https://docs.rs/crate/tiktoken-rs/"
license = "MIT"
readme = "../README.md"

[profile.release]
debug = 1

[dependencies]
anyhow = "1.0.76"
async-openai = { version = "0.31.1", optional = true, features = ["chat-completion-types"] }
base64 = "0.22.0"
bstr = "1.6.2"
dhat = { version = "0.3.2", optional = true }
fancy-regex = "0.16.2"
lazy_static = "1.4.0"
regex = "1.10.3"
rustc-hash = "2"

[features]
async-openai = ["dep:async-openai"]
dhat-heap = ["dep:dhat"]
