[package]
name = "tiktoken-rs"
version = "0.11.0"
description = "Library for encoding and decoding with the tiktoken library in Rust"
include = ["assets/**/*", "src/**/*", "README.md"]
edition = "2021"
authors = ["Roger Zurawicki <roger@zura.wiki>"]
rust-version = "1.73.0"
keywords = ["openai", "ai", "gpt", "bpe"]
homepage = "https://github.com/zurawiki/tiktoken-rs"
repository = "https://github.com/zurawiki/tiktoken-rs"
documentation = "https://docs.rs/crate/tiktoken-rs/"
license = "MIT"
readme = "../README.md"

[profile.release]
debug = 1

[dependencies]
anyhow = "1.0.102"
async-openai = { version = "0.34.0", optional = true, default-features = false, features = ["chat-completion-types"] }
base64 = "0.22.1"
bstr = "1.12.1"
dhat = { version = "0.3.2", optional = true }
fancy-regex = "0.17.0"
lazy_static = "1.5.0"
regex = "1.12.3"
rustc-hash = "1.1.0"

[features]
async-openai = ["dep:async-openai"]
dhat-heap = ["dep:dhat"]
