[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tiktoken"
version = "0.1.0"
description = "Python Tiktoken SDK"
authors = ["Cesar <cesar@polywrap.io>", "Niraj <niraj@polywrap.io>"]

[tool.poetry.dependencies]
python = "^3.10"
polywrap = "0.1.2"
